--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="admin-content">
             <h3 style="margin:0; text-align:center;">管理者メニュー</h3>
             
-            <a href="https://google.com" target="_blank" class="link-btn">🔗 Googleへ移動</a>
+            <a href="https://mrwater12.github.io/hanasaka_builder/" target="_blank" class="link-btn">🔗 Googleへ移動</a>
             
             <hr style="width:100%; border:0; border-top:1px solid #eee;">
 
@@ -239,4 +239,5 @@
 
     <script type="module" src="./js/main.js"></script>
 </body>
+
 </html>
